--- a/src/static/style.css
+++ b/src/static/style.css
@@ -39,7 +39,10 @@
     margin-top: 150px;
     position: inherit;
 }
-
+.duty strong{
+    padding-left: 15px;
+    padding-right: 15px;
+}
 .porfolio_li {
     font-size: 20px;
 }
@@ -212,6 +215,8 @@
     width: 100%;
     height: 460px;
     object-fit: cover;
+    margin-top: 20px;
+    border-radius: 5px;
 }
 
 .duty_exp {
